src/test/ui/or-patterns/exhaustiveness-unreachable-pattern.stderr
error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:15:9
   |
LL |         (1,) => {}
   |         ^^^^
   |
note: the lint level is defined here
  --> $DIR/exhaustiveness-unreachable-pattern.rs:3:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:20:9
   |
LL |         (2,) => {}
   |         ^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:26:9
   |
LL |         (1 | 2,) => {}
   |         ^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:31:9
   |
LL |         (1, 3) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:32:9
   |
LL |         (1, 4) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:33:9
   |
LL |         (2, 4) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:34:9
   |
LL |         (2 | 1, 4) => {}
   |         ^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:36:9
   |
LL |         (1, 4 | 5) => {}
   |         ^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:41:9
   |
LL |         (Some(1),) => {}
   |         ^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:42:9
   |
LL |         (None,) => {}
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:47:9
   |
LL |         ((1..=4,),) => {},
   |         ^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:53:12
   |
LL |          | 1,) => {}
   |            ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:60:15
   |
LL |             | 0] => {}
   |               ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:58:15
   |
LL |             | 0
   |               ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:68:10
   |
LL |         [1
   |          ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:74:14
   |
LL |         Some(0
   |              ^

error: or-patterns are not fully implemented yet
  --> $DIR/exhaustiveness-unreachable-pattern.rs:9:10
   |
LL |         (0 | _,) => {}
   |          ^^^^^

error: aborting due to 17 previous errors

